<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.3</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.qdd.designmall</groupId>
    <artifactId>design-mall</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>design-mall</name>
    <description>design-mall</description>

    <modules>
        <module>mall-common</module>
        <module>mall-security</module>
        <module>mall-mbp</module>
        <module>mall-admin</module>
        <module>mall-portal</module>
        <module>mall-chat</module>
        <module>mall-oms</module>
        <module>mall-home</module>
        <module>mall-pms</module>
        <module>mall-websocket</module>
        <module>shared-resources</module>
        <module>taobao-order</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <mybatisplus.version>3.5.5</mybatisplus.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.qdd.designmall</groupId>
                <artifactId>taobao-order</artifactId>
                <version>1.0.0</version>
            </dependency>
            <dependency>
                <groupId>com.qdd.designmall</groupId>
                <artifactId>shared-resources</artifactId>
                <version>1.0.0</version>
            </dependency>
            <dependency>
                <groupId>com.qdd.designmall</groupId>
                <artifactId>mall-websocket</artifactId>
                <version>1.0.0</version>
            </dependency>
            <dependency>
                <groupId>com.qiniu</groupId>
                <artifactId>qiniu-java-sdk</artifactId>
                <version>7.13.0</version>
            </dependency>
            <!--            模块-->
            <dependency>
                <groupId>com.qdd.designmall</groupId>
                <artifactId>mall-pms</artifactId>
                <version>1.0.0</version>
            </dependency>
            <dependency>
                <groupId>com.qdd.designmall</groupId>
                <artifactId>mall-home</artifactId>
                <version>1.0.0</version>
            </dependency>
            <dependency>
                <groupId>com.qdd.designmall</groupId>
                <artifactId>mall-oms</artifactId>
                <version>1.0.0</version>
            </dependency>
            <dependency>
                <groupId>com.qdd.designmall</groupId>
                <artifactId>mall-chat</artifactId>
                <version>1.0.0</version>
            </dependency>
            <dependency>
                <groupId>com.qdd.designmall</groupId>
                <artifactId>mall-common</artifactId>
                <version>1.0.0</version>
            </dependency>
            <dependency>
                <groupId>com.qdd.designmall</groupId>
                <artifactId>mall-security</artifactId>
                <version>1.0.0</version>
            </dependency>
            <dependency>
                <groupId>com.qdd.designmall</groupId>
                <artifactId>mall-mbp</artifactId>
                <version>1.0.0</version>
            </dependency>
            <!--            api 文档-->
            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                <version>4.4.0</version>
            </dependency>
            <dependency>
                <groupId>io.swagger</groupId>
                <artifactId>swagger-annotations</artifactId>
                <version>1.6.0</version>
            </dependency>
            <!--            数据库-->
            <dependency>
                <groupId>com.mysql</groupId>
                <artifactId>mysql-connector-j</artifactId>
                <version>8.3.0</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                <version>${mybatisplus.version}</version>
            </dependency>

            <!--        JWT 工具-->
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>0.12.5</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>0.12.5</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson if Gson is preferred -->
                <version>0.12.5</version>
            </dependency>
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>5.3.0</version>
            </dependency>

        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.7.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*</include>
                </includes>
            </resource>
        </resources>
    </build>

</project>
